--- a/public/chat.html
+++ b/public/chat.html
@@ -11,7 +11,7 @@
     </style>
   </head>
   <body>
-    <h1>Socket.io Chatterbox</h1>
+    <h1>Kasa</h1>
     <div id="status" class="border">Disconnected</div>
     <form id="login">
       <label for="login-input">Login:</label>
